mobilefrontend: Fix Parsoid content reflow on tablets
Parsoid content on tablet devices was initially rendered in a collapsed
state and then expanded, causing a flash of unstyled content. This was
caused by main.less using @max-width-breakpoint-tablet, which conflicted
with the JavaScript logic based on wgMFDeviceWidthTablet.

This change updates the CSS media query to use
@max-width-breakpoint-mobile, aligning the CSS behavior with the
JavaScript logic and ensuring a consistent initial layout on tablets.

Bug: T414221

--- a/resources/mobile.init.styles/main.less
+++ b/resources/mobile.init.styles/main.less
@@ -9,7 +9,8 @@
 	/* .mw-parser-output > section limits this to top level headings */
 	&.mf-expand-sections-clientpref-0 @{selector-parsoid-top-heading} + div:not( .mf-collapsible-content ),
 	.collapsible-block:not( .collapsible-block-js ) {
-		@media all and ( max-width: @max-width-breakpoint-tablet ) {
+		/** the breakpoint used here must correspond with wgMFDeviceWidthTablet to avoid [[phab:T414221]] */
+		@media all and ( max-width: @max-width-breakpoint-mobile ) {
 			display: none;
 		}
 	}
